--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Color Picker</title>
-  <script defer src="main.js"></script>
   <link rel="stylesheet" href="style.css">
+  <script defer src="utils.js"></script>
+  <script defer src="main.js"></script>
 </head>
 <body>
-  <div id="me">SOURAV</div>
+  <div id="me">©SouravBarui2022</div>
   <main>
-    <section>
+    <section id="secn">
       <div id="color-box">
         <div id="color-picker">
           <div id="color-pick"></div>
@@ -32,5 +33,8 @@
         <div id="tost">Color code copied</div>
     </section>
   </main>
+
+
+
 </body>
 </html>
