--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#222222" />
   <title>Color Picker</title>
   <link rel="stylesheet" href="style.css">
   <script defer src="utils.js"></script>
   <script defer src="main.js"></script>
 </head>
 <body>
-  <div id="me">©SouravBarui2022</div>
+  <div id="me">©SouravBarui2022</div> 
   <main>
     <section id="secn">
       <div id="color-box">
@@ -19,12 +20,12 @@
           <div id="main-selected"></div>
         </div>
         <div id="color-choice">
-          <div id="choice-hsl"></div>
-          <div id="selected"></div>
+          <div id="choice-bright"></div>
+          <div id="brithtness-selected"></div>
         </div>
       </div>
       <div id="copy-color-section">
-        <div id="color-naems">
+        <div id="color-names">
           <div id="hex-color-code"><span><b>#</b><p id="h-c">FF0000</p></span></div>
           <div id="show-color"></div>
           <span id="span"><div id="rgb-color-code"><b>rgb(</b><p>255, 0, 0</p><b>)</b></div></span>
