--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script defer src="utils.js"></script>
   <script defer src="main.js"></script>
 </head>
-<body>
+<body class="background"> 
   <div id="me" class="tl-glow opacity-0.6 brightness-0.2 animationTime-6 color-#fff">
     ©SouravBarui2022
   </div> 
@@ -24,6 +24,40 @@
 
       <div id="brithtness-selecter"></div>
     </div>
+
+    <div id="color-output-box">
+      <div class="color-output background">
+        <div class="color-name">HEX</div>
+        <div class="input"><input type="text" id="hex-input" spellcheck="false"></div>
+        <div class="copy-icon"><span></span></div>
+      </div>
+      <div class="color-output background">
+        <div class="color-name">RGB</div>
+        <div class="input"><input type="text" id="" spellcheck="false"></div>
+        <div class="copy-icon"><span></span></div>
+      </div>
+      <div class="color-output background">
+        <div class="color-name">HSL</div>
+        <div class="input"><input type="text" id="" spellcheck="false"></div>
+        <div class="copy-icon"><span></span></div>
+      </div>
+      <div class="color-output background">
+        <div class="color-name">HWB</div>
+        <div class="input"><input type="text" id="" spellcheck="false"></div>
+        <div class="copy-icon"><span></span></div>
+      </div>
+      <div class="color-output background">
+        <div class="color-name">CMYK</div>
+        <div class="input"><input type="text" id="" spellcheck="false"></div>
+        <div class="copy-icon"><span></span></div>
+      </div>
+      <div class="color-output background">
+        <div class="color-name">NCOL</div>
+        <div class="input"><input type="text" id="" spellcheck="false"></div>
+        <div class="copy-icon"><span></span></div>
+      </div>
+    </div>
+
     <!-- <section id="secn">
       <div id="color-box">
         <div id="color-picker">
