--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="color-output background">
         <div class="color-name">RGB</div>
-        <div class="input"><input type="text" id="" spellcheck="false"></div>
+        <div class="input"><input type="text" id="" spellcheck="false" maxlength="19"></div>
         <div class="copy-icon"><span></span></div>
       </div>
       <div class="color-output background">
