--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Color Picker</title>
   <link rel="stylesheet" href="style.css">
   <script defer src="textLibrary.js"></script>
+  <script defer src="images.js"></script>
   <script defer src="utils.js"></script>
   <script defer src="main.js"></script>
 </head>
