--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="color-output-box">
       <div class="color-output background">
         <div class="color-name">HEX</div>
-        <div class="input"><input type="text" id="hex-input" spellcheck="false"></div>
+        <div class="input" id="hex-in-fild"><div id="has">#</div><input type="text" id="hex-input" spellcheck="false"></div>
         <div class="copy-icon"><span></span></div>
       </div>
       <div class="color-output background">
