--- a/index.html
+++ b/index.html
@@ -33,27 +33,27 @@
       </div>
       <div class="color-output background">
         <div class="color-name">RGB</div>
-        <div class="input"><input type="text" id="" spellcheck="false" maxlength="19"></div>
+        <div class="input"><input type="text" id="rgb-input" spellcheck="false" maxlength="18"></div>
         <div class="copy-icon"><span></span></div>
       </div>
       <div class="color-output background">
         <div class="color-name">HSL</div>
-        <div class="input"><input type="text" id="" spellcheck="false"></div>
+        <div class="input"><input type="text" id="hsl-input" spellcheck="false"></div>
         <div class="copy-icon"><span></span></div>
       </div>
       <div class="color-output background">
         <div class="color-name">HWB</div>
-        <div class="input"><input type="text" id="" spellcheck="false"></div>
+        <div class="input"><input type="text" id="hwb-input" spellcheck="false"></div>
+        <div class="copy-icon"><span></span></div>
+      </div>
+      <div class="color-output background">
+        <div class="color-name">HSV</div>
+        <div class="input"><input type="text" id="hsv-input" spellcheck="false"></div>
         <div class="copy-icon"><span></span></div>
       </div>
       <div class="color-output background">
         <div class="color-name">CMYK</div>
-        <div class="input"><input type="text" id="" spellcheck="false"></div>
-        <div class="copy-icon"><span></span></div>
-      </div>
-      <div class="color-output background">
-        <div class="color-name">NCOL</div>
-        <div class="input"><input type="text" id="" spellcheck="false"></div>
+        <div class="input"><input type="text" id="cmyk-input" spellcheck="false"></div>
         <div class="copy-icon"><span></span></div>
       </div>
     </div>
