--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <div class="copy-icon"><span></span></div>
       </div>
       <div class="color-output background">
-        <div class="color-name">CMYK</div>
-        <div class="input"><input type="text" id="cmyk-input" spellcheck="false"></div>
+        <div class="color-name">HSB</div>
+        <div class="input"><input type="text" id="hsb-input" spellcheck="false"></div>
         <div class="copy-icon"><span></span></div>
       </div>
     </div>
