--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <meta name="theme-color" content="#222222" />
   <title>Color Picker</title>
   <link rel="stylesheet" href="style.css">
-  <script defer src="textLibrary.js"></script>
-  <script defer src="utils.js"></script>
-  <script defer src="main.js"></script>
+  <script defer src="./js/textLibrary.js"></script>
+  <script defer src="./js/utils.js"></script>
+  <script defer src="./js/functions.js"></script>
+  <script defer src="./js/main.js"></script>
 </head>
 <body class="background"> 
   <div id="me" class="tl-glow opacity-0.6 brightness-0.2 animationTime-6 color-#fff">
@@ -57,28 +58,6 @@
         <div class="copy-icon"><span></span></div>
       </div>
     </div>
-
-    <!-- <section id="secn">
-      <div id="color-box">
-        <div id="color-picker">
-          <div id="color-pick"></div>
-        </div>
-        <div id="color-choice">
-          <div id="choice-bright"></div>
-        </div>
-      </div>
-      <div id="copy-color-section">
-        <div id="color-names">
-          <div id="hex-color-code"><span><b>#</b><p id="h-c">FF0000</p></span></div>
-          <div id="show-color"></div>
-          <span id="span"><div id="rgb-color-code"><b>rgb(</b><p>255, 0, 0</p><b>)</b></div></span>
-        </div>
-        </div>
-        <div id="tost">Color code copied</div>
-    </section> -->
   </main>
-
-
-
 </body>
 </html>
