--- a/index.html
+++ b/index.html
@@ -29,32 +29,32 @@
     <div id="color-output-box">
       <div class="color-output background">
         <div class="color-name">HEX</div>
-        <div class="input" id="hex-in-fild"><div id="has">#</div><input type="text" id="hex-input" spellcheck="false"></div>
+        <div class="input" id="hex-in-fild"><div id="has">#</div><input type="text" id="hex-input" maxlength="6" spellcheck="false"></div>
         <div class="copy-icon"><span></span></div>
       </div>
       <div class="color-output background">
         <div class="color-name">RGB</div>
-        <div class="input"><input type="text" id="rgb-input" spellcheck="false" maxlength="18"></div>
+        <div class="input"><input type="text" id="rgb-input" spellcheck="false" maxlength="13"></div>
         <div class="copy-icon"><span></span></div>
       </div>
       <div class="color-output background">
         <div class="color-name">HSL</div>
-        <div class="input"><input type="text" id="hsl-input" spellcheck="false"></div>
+        <div class="input"><input type="text" id="hsl-input" maxlength="16" spellcheck="false"></div>
         <div class="copy-icon"><span></span></div>
       </div>
       <div class="color-output background">
         <div class="color-name">HWB</div>
-        <div class="input"><input type="text" id="hwb-input" spellcheck="false"></div>
+        <div class="input"><input type="text" id="hwb-input" maxlength="16" spellcheck="false"></div>
         <div class="copy-icon"><span></span></div>
       </div>
       <div class="color-output background">
         <div class="color-name">HSV</div>
-        <div class="input"><input type="text" id="hsv-input" spellcheck="false"></div>
+        <div class="input"><input type="text" id="hsv-input" maxlength="16" spellcheck="false"></div>
         <div class="copy-icon"><span></span></div>
       </div>
       <div class="color-output background">
-        <div class="color-name">HSB</div>
-        <div class="input"><input type="text" id="hsb-input" spellcheck="false"></div>
+        <div class="color-name">CMYK</div>
+        <div class="input"><input type="text" id="cmyk-input" maxlength="22" spellcheck="false"></div>
         <div class="copy-icon"><span></span></div>
       </div>
     </div>
